--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("http://fonts.cdnfonts.com/css/games");
+
 *,
 *::before,
 *::after {
@@ -7,11 +9,12 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: Montserrat -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  font-family: "Games", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: grid;
   place-items: center;
   min-height: 100vh;
+  font-weight: 400;
 }
 
 #board {
