--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,20 @@ body {
   display: none;
 }
 
-#board {
+.message {
+  padding: 1rem;
+  text-align: center;
+  width: calc(4rem * 3 * 0.8rem * 2);
+  background-color: lightcoral;
+  border-radius: 0.3rem;
+  margin: 2rem 0;
+  font-size: 1.5rem;
+}
+
+.board {
   background-color: #0a0a0a;
   display: grid;
-  gap: 0.5rem;
+  gap: 0.8rem;
   /* grid-template-columns: repeat(3, 1fr); */
 }
 
