add symbol circle and cross from font awesome

--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,12 @@ body {
   height: 4rem;
   background-color: white;
 }
+
+.oCircle::before,
+.xCross::before {
+  content: "\274C";
+}
+
+.oCircle::before {
+  content: "\26AB";
+}
