--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.cdnfonts.com/css/games");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap");
 
 *,
 *::before,
@@ -9,8 +9,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Games", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", sans-serif;
   display: grid;
   place-items: center;
   min-height: 100vh;
@@ -19,6 +18,7 @@ body {
 
 .title-game {
   font-size: 3.5rem;
+  font-weight: bold;
 }
 
 .wrapper-input-size {
